# internal/handler/user.go
@@ -1,8 +1,10 @@
 package handler
 
 import (
+	"net/http"
 	"scaffold/common/errorx"
 	"scaffold/common/httpx"
+	"scaffold/internal/model"
 	"scaffold/internal/service"
 
 	"github.com/gin-gonic/gin"
@@ -18,20 +20,21 @@ func NewUserHandle(svcCtx *service.ServiceContext) *UserHandle {
 	}
 }
 
+// List 用户列表
 // @Summary 用户列表
 // @Description 用户列表
 // @Tags user
 // @Accept json
 // @Produce json
-// @Param query query UserListReq false "查询参数"
+// @Param queryList query UserListReq false "查询参数"
 // @Success 200 {object} httpx.Resp{data=UserListRes} "响应结果"
-// @Router /user [get]
+// @Router /v1/user [get]
 func (l *UserHandle) List(ctx *gin.Context) {
 	// 参数验证
 	var req UserListReq
 	if err := ctx.ShouldBindQuery(&req); err != nil {
 		l.svcCtx.Log.Error().Ctx(ctx.Request.Context()).Msg(err.Error())
-		httpx.Error400(ctx, err.Error())
+		httpx.Error200(ctx, http.StatusBadRequest, err.Error())
 		return
 	}
 
@@ -45,20 +48,21 @@ func (l *UserHandle) List(ctx *gin.Context) {
 	}
 	if !exists {
 		l.svcCtx.Log.Error().Ctx(ctx.Request.Context()).Msgf("user not found, id: %d", 1)
-		httpx.Error404(ctx)
+		httpx.Error200(ctx, http.StatusNotFound, errorx.NoData)
 		return
 	}
 	httpx.Success(ctx, user)
 }
 
+// Create 新增用户
 // @Summary 新增用户
 // @Description 新增用户
 // @Tags user
 // @Accept json
 // @Produce json
-// @Param body body UserCreateReq true "body参数"
+// @Param payload body UserCreateReq true "body参数"
 // @Success 200 {object} httpx.Resp "响应结果"
-// @Router /user [post]
+// @Router /v1/user [post]
 func (l *UserHandle) Create(ctx *gin.Context) {
 	// 参数验证
 	var req UserCreateReq
@@ -68,6 +72,16 @@ func (l *UserHandle) Create(ctx *gin.Context) {
 		httpx.Error400(ctx, err.Error())
 		return
 	}
+
+	err = l.svcCtx.DBClient.InsertUser(ctx, &model.InsertUserParams{
+		Name:        "",
+		Sex:         "",
+		BirthDate:   "",
+		IDCard:      "",
+		Mobile:      "",
+		Avatar:      "",
+		Description: "",
+	})
 
 	httpx.Success(ctx, nil)
 }
